Added controllers, services and some stratégies units tests and models of all strategies